--- a/inspector/src/components/actionTabs/tabs/propertyGrids/animations/curveEditor/scss/canvas.scss
+++ b/inspector/src/components/actionTabs/tabs/propertyGrids/animations/curveEditor/scss/canvas.scss
@@ -36,7 +36,7 @@
             margin-left: 40px;
             width: calc(100% - 40px);
             height: 100%;
-            background: black;
+            background: #111111;
             opacity: 0.2;
             pointer-events: none;
             position: absolute;
