--- a/inspector/src/components/actionTabs/tabs/propertyGrids/animations/curveEditor/scss/sideBar.scss
+++ b/inspector/src/components/actionTabs/tabs/propertyGrids/animations/curveEditor/scss/sideBar.scss
@@ -194,6 +194,8 @@
     }
 
     #add-animation-pane {
+        grid-column: 1;
+        grid-row: 2;
         width: 100%;
         height: 100%;
         display: grid;
@@ -275,6 +277,93 @@
             grid-row: 10;
             grid-column: 2;           
             justify-self: left;
+        }
+    }
+
+    #edit-animation-pane {
+        grid-column: 1;
+        grid-row: 2;
+
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 75px 1fr;
+        grid-template-rows: 10px 20px 10px 20px 10px 20px 10px 20px 1fr;
+        color:white;
+        font-family: 'acumin-pro-condensed';
+        font-size: 10pt;
+        background: #111111;
+
+        .input-text {
+            border: 0;
+            background: #252525;            
+            width: 127px; 
+            color:white;
+            font-family: 'acumin-pro-condensed';
+            font-size: 10pt;
+        }
+
+        .option {
+            background: #252525;
+            color: white;
+            border: 0;
+        }
+
+        #edit-animation-display-name-label {
+            grid-row: 2;
+            grid-column: 1;
+            justify-self: end;
+            margin-right: 10px;
+        }      
+
+        #edit-animation-property-label {
+            grid-row: 4;
+            grid-column: 1;
+            justify-self: end;
+            margin-right: 10px;
+        }        
+
+        #edit-animation-loop-mode-label {
+            grid-row: 6;
+            grid-column: 1;
+            justify-self: end;
+            margin-right: 10px;
+        }    
+
+        #edit-animation-name {
+            grid-row: 2;
+            grid-column: 2;
+            margin-right: 10px;
+        }
+
+        #edit-animation-property {
+            grid-row: 4;
+            grid-column: 2;
+            margin-right: 10px;
+        }
+
+        #edit-animation-loop-mode {
+            grid-row: 6;
+            grid-column: 2;
+            margin-right: 10px;
+        }
+
+        #edit-animation {
+            grid-row: 8;
+            grid-column: 1 / 3;           
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: 100%;
+
+            #edit-animation-ok {
+                grid-row: 1;
+                grid-column: 1;
+            }
+
+            #edit-animation-cancel {
+                grid-row: 1;
+                grid-column: 2;
+            }
         }
     }
 
