--- a/inspector/src/components/actionTabs/tabs/propertyGrids/animations/curveEditor/scss/canvas.scss
+++ b/inspector/src/components/actionTabs/tabs/propertyGrids/animations/curveEditor/scss/canvas.scss
@@ -165,7 +165,8 @@
             justify-self: center;
             width: 1.5px;
             background: #ffffff;
-            height: 100%;        
+            height: 100%;   
+            pointer-events: none;     
         }
 
         #play-head-circle {
