--- a/inspector/src/components/actionTabs/tabs/propertyGrids/animations/curveEditor/scss/topBar.scss
+++ b/inspector/src/components/actionTabs/tabs/propertyGrids/animations/curveEditor/scss/topBar.scss
@@ -45,4 +45,14 @@
         grid-row: 1;
         grid-column: 8;
     }
+
+    #flatten-tangent {
+        grid-row: 1;
+        grid-column: 9;
+    }
+    
+    #linear-tangent {
+        grid-row: 1;
+        grid-column: 10;
+    }
 }
