--- a/guiEditor/src/main.scss
+++ b/guiEditor/src/main.scss
@@ -3,7 +3,7 @@
     grid-template-rows: calc(100% - 120px) 120px;
     height: 100%;
     width: 100%;
-    background: #464646;
+    background: #e2e2e2;
     font: 14px "acumin-pro";   
 }
 
