--- a/guiEditor/src/scss/hamburgerMenu.scss
+++ b/guiEditor/src/scss/hamburgerMenu.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     
     &:hover {
-        background-color: white;
+        background-color: #666666;
         svg {
             fill: black;
         }
