ACE: locked / broken tangents

--- a/inspector/src/components/actionTabs/tabs/propertyGrids/animations/curveEditor/scss/topBar.scss
+++ b/inspector/src/components/actionTabs/tabs/propertyGrids/animations/curveEditor/scss/topBar.scss
@@ -54,5 +54,15 @@
     #linear-tangent {
         grid-row: 1;
         grid-column: 10;
+    }    
+
+    #break-tangent {
+        grid-row: 1;
+        grid-column: 11;
+    }
+        
+    #unify-tangent {
+        grid-row: 1;
+        grid-column: 12;
     }
 }
