--- a/guiEditor/src/components/sceneExplorer/sceneExplorer.scss
+++ b/guiEditor/src/components/sceneExplorer/sceneExplorer.scss
@@ -1,4 +1,4 @@
-#scene-explorer-host {
+#ge-scene-explorer-host {
     position: absolute;
     left: 0px;
     top:0px;
@@ -31,7 +31,7 @@
     transform: scale(1);
 }
 
-#sceneExplorer {
+#ge-sceneExplorer {
     background: #e2e2e2;
     height: 100%;
     margin: 0;
