--- a/guiEditor/src/diagram/workbenchCanvas.scss
+++ b/guiEditor/src/diagram/workbenchCanvas.scss
@@ -3,7 +3,8 @@
     height: 100%;
     margin: 0;
     padding: 0;            
-    font: 14px "acumin-pro";  
+    font: 14px "acumin-pro";
+    cursor: default;
     user-select: none;
     overflow: hidden;
 
